--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Balance | by: Martin Fellay (Challenge JS)</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -94,6 +94,6 @@
             <button class="btn" type="submit" id="send">Send</button>
         </form>
     </footer>
-<script src="/js/index.js"></script>
+<script type=module src="js/index.js"></script>
 </body>
 </html>
